chore: fix bullet list spacing

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -323,9 +323,8 @@
   }
 
   .sl-markdown-content ul:not(:where(.not-content *)) {
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
-    margin-left: 1.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     list-style-type: disc;
   }
 
